# oca-storage

./: README.md
odoo-bringout-oca-storage-fs_attachment/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_attachment/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_base_multi_image/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_base_multi_image/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_base_multi_media/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_base_multi_media/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_file/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_file/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-storage-fs_file_demo/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_file_demo/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_file_demo/fs_file_demo/i18n/: bs.po
odoo-bringout-oca-storage-fs_image/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_image/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-storage-fs_image_thumbnail/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_image_thumbnail/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_product_brand_multi_image/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_product_brand_multi_image/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_product_multi_image/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_product_multi_image/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_product_multi_media/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_product_multi_media/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_product_multi_media/fs_product_multi_media/i18n/: bs.po
odoo-bringout-oca-storage-fs_product_public_category_multi_image/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_product_public_category_multi_image/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_product_public_category_multi_image/fs_product_public_category_multi_image/i18n/: bs.po
odoo-bringout-oca-storage-fs_storage/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_storage/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-fs_storage_backup/: README.md  pyproject.toml
odoo-bringout-oca-storage-fs_storage_backup/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-storage-image_tag/: README.md  pyproject.toml
odoo-bringout-oca-storage-image_tag/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-storage-storage_backend/: README.md  pyproject.toml
odoo-bringout-oca-storage-storage_backend_sftp/: README.md  pyproject.toml
odoo-bringout-oca-storage-storage_file/: README.md  pyproject.toml
(+40 files in other folders)
