[project]
name = "odoo-bringout-oca-storage-fs_product_multi_media"
version = "16.0.0"
description = "Fs Product Multi Media - 
        Link media to products and categories"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-storage-fs_base_multi_media>=16.0.0",
    "odoo-bringout-oca-ocb-product>=16.0.0",
    "odoo-bringout-oca-ocb-sales_team>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fs_product_multi_media"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
